- Fixes tip bug on Firefox + new project preface on Safari - Fixes positioning bug of team tips

--- a/src/scss/fixes/safari.scss
+++ b/src/scss/fixes/safari.scss
@@ -3,7 +3,7 @@
 .about-description { width: 390px; }
 
 .project-meta {
-    width: 22em;
+    width: 605px;
     
     dd { width: 18em; }
 }
